2014-05-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (all_files): Get working again, having been broken
	by recent changes to startup.  Don't use info_follow_menus.

	* info/indices.c (allfiles_node): Declared global.
	(allfiles_create_node) Moved to info.c

	* info/info.c (node_file_name): Argument dirok deleted.
	(allfiles_create_node): Don't use numbers as labels of menu entries.
	Don't create a containing FILE_BUFFER for allfiles_node.
	(info_find_matching_files): Use add_pointer_to_array to build up
	list.  Check for man pages directly (previously this was done in
	info_follow_menus).

	* info/info.h (add_pointer_to_array): Comment rewritten to match
	macro definition.

2014-05-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/footnotes.c (info_get_or_remove_footnotes): Don't
	display footnotes for "*" node.

2014-05-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (create_internal_info_help_node): Don't print
	blank line at end of help window.  This could result in scrolling
	too far down when paging down to the bottom.

2014-05-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/filesys.c: [!BUILDING_LIBRARY], [!BUILDING_LIBARARY]: #if
	checks conditional upon these macros removed.

2014-05-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/filesys.c (info_add_extension): Loop trying various file
	extensions moved from info_file_find_next_in_path.
	(info_find_fullpath): Account for null struct stat argument.  Check
	case when path is not absolute, but contains intermediate
	subdirectories.
	* info/t/split.sh: New test.

2014-05-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_set_node_of_window): Argument
	'remember' removed.  All callers updated.
	(begin_multiple_window_info_session): Don't call
	remember_window_and_node when tiling.

	* info/indices.c (do_info_index_search): Take FILE_BUFFER
	argument.  All callers updated.
	* info/info.c (main) <index search>: Don't set node of window before